--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rodrigue Edo - Professional Portfolio
-email: rodrigue.edo@example.com
+email: edorodrigue@yahoo.fr
 description: >-
   Professional portfolio showcasing my projects, skills, and experience.
 baseurl: "/rodrigueedo"
