Style: profile picture size and position improved on About page

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Rodrigue Edo - Professional Portfolio
 email: edorodrigue@yahoo.fr
 description: >-
   Professional portfolio showcasing my projects, skills, and experience.
-baseurl: "/rodrigueedo"
+baseurl: ""
 url: "https://berthiot.github.io/rodrigueedo"
 github_username: berthiot
 
